# nexslog_hub

./: .gitignore  Dockerfile  Markdown.md  README.md  docker-compose.yml  importar_pedidos.csv  memory:  pyproject.toml
.github/workflows/: ci.yml
nexslog/: dashboard.py
nexslog/analytics/: engine.py
nexslog/app/: database.py  main.py  models.py
nexslog/app/adapters/: wms.py
nexslog/database/: database.py  models.py
nexslog/simulador/: simulador.py
tests/: conftest.py  test_api.py  test_dashboard.py  test_database.py  test_main.py  test_wms_adapter.py
