[project]
name = "nexslog"
version = "0.1.0"
description = "Interoperabilidade ERP, WMS e TMS"
authors = [{ name = "douglasfariasil", email = "douglasfariasil@outlook.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "fastapi[standard] (>=0.128.5,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "sqlmodel (>=0.0.32,<0.0.33)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.0,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
]


[tool.ruff]
line-length = 82
extend-exclude = ["migrations"]


[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]


[tool.ruff.format]
preview = true
quote-style = "single"


[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"


[tool.taskipy.tasks]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "fastapi dev nexslog/app/main.py"
pre_test = "task lint"
test = "pytest -s -x --cov=nexslog -vv"
post_test = "coverage html"
